# aws-cdk-learning

./: banking-info.json  sample-cloudformation.yml
cdk-transitgateway/: cdk.json
cdk-vpce-app-csharp/: vpce-app.sln
cdk-vpcendpoint/: app.py  cdk.json  (+4 more)
poetry-chalice-cdk/: pyproject.toml
poetry-chalice-cdk/poetry-chalice-cdk-app/infrastructure/: app.py
poetry-chalice-cdk/poetry-chalice-cdk-app/infrastructure/cdk.out/: manifest.json  poetry-chalice-cdk-app.assets.json  poetry-chalice-cdk-app.template.json  tree.json
poetry-chalice-cdk/poetry-chalice-cdk-app/infrastructure/chalice.out/26245166e00746f9bdb724334b965483/: sam.json
poetry-chalice-cdk/poetry-chalice-cdk-app/infrastructure/chalice.out/363d327c31e243399b2cf72399445788/: sam.json
poetry-chalice-cdk/poetry-chalice-cdk-app/infrastructure/chalice.out/3b4a4ba1b5b64834b8cfb4436bb290ee/: sam.json
poetry-chalice-cdk/poetry-chalice-cdk-app/infrastructure/chalice.out/c37c5e909c214939803b9d3161b1bb1c/: sam.json
poetry-chalice-cdk/poetry-chalice-cdk-app/infrastructure/stacks/: chaliceapp.py
poetry-chalice-cdk/poetry-chalice-cdk-app/runtime/: app.py
poetry-chalice-cdk/poetry-chalice-cdk-app/runtime/.chalice/: config.json
poetry-chalice-dynamodb/: app.py  pyproject.toml
poetry-chalice-dynamodb/crud-dynamodb/: app.py
poetry-chalice-dynamodb/crud-dynamodb/.chalice/: config.json
poetry-chalice-dynamodb/crud-dynamodb/chalicelib/: dynamo.py
poetry-chalice-dynamodb/poetry_chalice_dynamodb/: poetry_chalice_dynamodb_stack.py
poetry-chalice-dynamodb/tests/unit/: test_poetry_chalice_dynamodb_stack.py
(+64 files in other folders)
